--- a/resource/turtlekitBuild.properties
+++ b/resource/turtlekitBuild.properties
@@ -3,6 +3,7 @@ author=Fabien Michel
 description=TurtleKit ${turtlekit.version}, An artificial life platform inspired by the Logo programming and built on top of MaDKit
 project.label=TurtleKit ${turtlekit.version}
 madkit.web=http://www.madkit.net
+turtlekit.web=http://www.turtlekit.org
 
 # directories
 build.dir=build
@@ -15,6 +16,13 @@ i18n.build.dir=${build.dir}/turtlekit/i18n
 i18n.src.dir=${src.dir}/turtlekit/i18n
 madkit.lib.dir=lib
 
+#web server directories
+turtlekit.ftp.dir=turtlekit
+release.ftp.dir=${turtlekit.ftp.dir}/repository/TurtleKit-${turtlekit.version}
+test.ftp.dir=${release.ftp.dir}/test-reports
+javaws.ftp.dir=javaws
+
+
 #build resources
 sun.api.url=http://docs.oracle.com/javase/7/docs/api/
 
@@ -23,7 +31,7 @@ jar.file=${release.dir}/${turtlekit.jar.name}
 executable.name=turtlekit-3-Desktop
 src.zip.name=turtlekit-${turtlekit.version}-src.zip
 src.zip.location=${docs.dir}/${src.zip.name}
-distribution.zip.name=turtlekit-${turtlekit.version}.zip
+distribution.zip.name=TurtleKit-${turtlekit.version}.zip
 doc.html=documentation.html
 turtlekit.ant.targets.file=${src.dir}/MDKAntTargets.xml
 manifest.mf=MANIFEST.MF
