--- a/src/turtlekit/kernel/turtlekit.properties
+++ b/src/turtlekit/kernel/turtlekit.properties
@@ -16,7 +16,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #-------------------------------------------------------------------------------
 #TurtleKit version info
-turtlekit.version=3.0.0.3
+turtlekit.version=3.0.0.4
 turtlekit.jar.name=turtlekit-${turtlekit.version}.jar
 desktopFrameClass=turtlekit.gui.TKDesktopFrame
 agentFrameClass=turtlekit.gui.TKAgentFrame
@@ -33,3 +33,5 @@ patch=turtlekit.kernel.Patch
 noWrap=false
 cuda=false
 fastRendering=false
+renderingInterval=1
+
