- Java 8 is now required - working on Cuda tools: The API is not backward compatible - fixes and minor changes

--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
 	<property file="${resource.dir}/turtlekitBuild.properties" />
 
 	<property name="madkit.lib.dir" value="lib" />
-	<property name="madkit.version" value="5.0.5.1" />
+	<property name="madkit.version" value="5.0.5.3" />
 
 	<!-- user's specific local properties -->
 	<property name="server.info.dir" value="${user.home}/.mdk_keystore" />
@@ -66,9 +66,9 @@
 
 	     ================================= -->
 	<fileset id="third.party.libraries" dir="lib">
-		<include name="jcuda-0.6.5.jar" />
+		<include name="jcuda-0.7.5b.jar" />
 		<include name="jcudaUtils-0.0.4.jar" />
-		<include name="jcurand-0.6.5.jar" />
+		<include name="jcurand-0.7.5b.jar" />
 		<include name="jfreechart-1.0.19.jar" />
 		<include name="jcommon-1.0.23.jar" />
 	</fileset>
