--- a/src/turtlekit/kernel/turtlekit.properties
+++ b/src/turtlekit/kernel/turtlekit.properties
@@ -16,7 +16,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #-------------------------------------------------------------------------------
 #TurtleKit version info
-turtlekit.version=3.0.0.4b
+turtlekit.version=3.0.0.5
 turtlekit.jar.name=turtlekit-${turtlekit.version}.jar
 desktopFrameClass=turtlekit.gui.TKDesktopFrame
 agentFrameClass=turtlekit.gui.TKAgentFrame
