working on Cuda tools in progress, now stable. Old codes have been fixed accordingly

--- a/src/turtlekit/kernel/turtlekit.properties
+++ b/src/turtlekit/kernel/turtlekit.properties
@@ -34,4 +34,8 @@ noWrap=false
 cuda=false
 fastRendering=false
 renderingInterval=1
-
+turtleKitLogLevel=INFO
+tkGuiLogLevel=INFO
+tkKernelLogLevel=INFO
+turtleLogLevel=INFO
+environmentLogLevel=OFF
