--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
 	<property file="${resource.dir}/turtlekitBuild.properties" />
 
 	<property name="madkit.lib.dir" value="lib" />
-	<property name="madkit.version" value="5.3.1" />
+	<property name="madkit.version" value="5.4" />
 
 	<!-- user's specific local properties -->
 	<property name="server.info.dir" value="${user.home}/.mdk_keystore" />
@@ -70,6 +70,7 @@
 		<include name="jcuda-natives-0.9.0-linux-x86_64.jar" />
 		<include name="jcudaUtils-0.0.4.jar" />
 		<include name="jcurand-0.9.0.jar" />
+		<include name="controlsfx-8.40.18-SNAPSHOT.jar" />
 		<include name="jfreechart-1.0.19.jar" />
 		<include name="jcommon-1.0.23.jar" />
 	</fileset>
